--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
     {{>header}}
+    <p>this site was created by Liam D.</p>
     <img class="portrait" src="/img/me.png">
     </div>
 
